# mlops-demo-health-pressure-risk

./: .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  README.md  databricks.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-prod.yml
conf/: dev.yml  prod.yml
docs/: architecture.md  data_sources.md  decisions.md  pipeline_limitations.md
resources/: README.md  jobs.yml  models.yml
scripts/: build-wheel.sh  setup-dev.ps1  setup-dev.sh
src/: cli.py  config.py
src/ingestion/: cnes_ingest.py  hospitais_leitos_ingest.py  srag_ingest.py
src/monitoring/: feature_drift_monitor.py  performance_monitor.py  retrain_trigger.py
src/quality/: checks.py  runner.py
src/scoring/: batch_score.py
src/training/: evaluate.py  register_model.py  train_baseline_lr.py  train_gbt.py
src/transforms/: gold_pressure_features.py  silver_capacity_municipio_mes.py  silver_capacity_municipio_semana.py  silver_srag_municipio_semana.py
tests/: conftest.py  test_batch_score.py  test_gold_features.py
