[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-pressure-risk"
version = "0.1.0"
description = "Radar de Pressão Assistencial — MLOps pipeline para previsão de risco de sobrecarga hospitalar respiratória por município"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Christian Van Bellen", email = "christian.bellen@indicium.tech" }
]

# Dependências de produção — apenas libs NÃO fornecidas pelo DBR 16.4 ML
# mlflow, lightgbm, sklearn, pandas, numpy, matplotlib, requests,
# pyyaml, databricks-sdk já estão no runtime — não reinstalar para
# evitar conflitos de versão no cluster.
dependencies = [
  # Qualidade de dados (ausente no DBR 16.4 ML)
  "databricks-labs-dqx>=0.13.0,<0.14.0",

  # Feature drift (ausente no DBR 16.4 ML)
  "evidently>=0.7.0",
]

[project.optional-dependencies]
# Dependências de desenvolvimento — não vão para o cluster
dev = [
  # Qualidade de código
  "ruff>=0.4.0",
  "mypy>=1.10.0",

  # Testes
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",

  # Notebooks locais
  "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/ingestion",
  "src/transforms",
  "src/training",
  "src/scoring",
  "src/monitoring",
  "src/quality",
]

[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"

[tool.hatch.build.targets.editable]
sources = ["src"]
